be able to login just with name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
+
     <h1>Book Me</h1>
+    <div class="login">
+
+    </div>
     <div class="over-all">
 
       <div id="wrapper">
