working before seeding

--- a/index.html
+++ b/index.html
@@ -3,24 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>Book Me</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
 
-    <h1>Book Me</h1>
-    <div class="login">
+    <!-- <h2 class="ui header">Book Me</h2> -->
 
+    <div class="ui sizer vertical segment">
+      <div class="ui red huge header" id = 'logo'>BooK Me</div>
+    </div>
+
+
+
+    <div class="login">
     </div>
     <div class="over-all">
 
       <div id="wrapper">
+      </div>
+      <div class="user-and-detail">
+        <div class="user">
+        </div>
+
+        <div class="detail">
+        </div>
+
 
       </div>
 
-      <div class="detail">
 
-      </div>
-  </div>
+    </div>
 
 
 
